# kurumi

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  Xargo.toml  makefat32.sh  x86_64-kurumi.json
device/: Cargo.toml
device/src/: ata.rs  disk.rs  io.rs  keyboard.rs  lib.rs  pic.rs  tty.rs
drivers/: Cargo.toml
drivers/src/: io.rs  lib.rs  pic.rs
filesystem/: Cargo.toml
filesystem/src/: file.rs  lib.rs
filesystem/src/fat32/: bpb.rs  cluster.rs  directory.rs  mod.rs
interrupt/: Cargo.toml
interrupt/src/: dtables.rs  idt.rs  lib.rs  macros.rs
interrupts/: Cargo.toml
interrupts/src/: idt.rs  lib.rs
isofiles/boot/grub/: grub.cfg
memory/: Cargo.toml
memory/src/: READEME  area_frame_allocator.rs  bump.rs  frame.rs  heap_allocator.rs  lib.rs  stack_allocator.rs
memory/src/paging/: entry.rs  mapper.rs  mod.rs  table.rs  temporary_page.rs
src/: kernel.rs  lib.rs
src/arch/x86_64/: boot.asm  linker.ld  long_mode_init.asm
vga/: Cargo.toml
vga/src/: lib.rs
