[package]
name = "kurumi"
version = "0.1.0"
authors = ["Hanaasagi <ambiguous404@gmail.com>"]

[lib]
crate-type = ["staticlib"]
path = "src/kernel.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
rlibc = "1.0"
multiboot2 = "0.3.2"
linked_list_allocator = "0.5"
x86_64 = "0.1.2"

[dependencies.interrupt]
path = "interrupt"

[dependencies.vga]
path = "vga"

[dependencies.device]
path = "device"

[dependencies.memory]
path = "memory"

[dependencies.filesystem]
path = "filesystem"
